
[TestConvertModule_Simple - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 2:13-2:14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 2:16-2:22,
                                },
                                declare: true,
                                span: 2:9-2:23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 3:18-3:21,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 3:25-3:29,
                                    },
                                },
                                declare: true,
                                span: 3:9-3:30,
                            },
                            &ast.TypeDecl{
                                Name: &ast.Ident{
                                    Name: "MyType",
                                    span: 4:6-4:12,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 4:15-4:21,
                                },
                                declare: true,
                                span: 4:1-4:22,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_SingleNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:7-3:8,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:10-3:16,
                                },
                                export: true,
                                declare: true,
                                span: 3:3-3:17,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 4:12-4:15,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 4:19-4:23,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 4:3-4:24,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_NestedNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 6:7-6:8,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 6:10-6:16,
                                },
                                export: true,
                                declare: true,
                                span: 6:3-6:17,
                            },
                        },
                    },
                    key: "Outer",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 4:9-4:10,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 4:12-4:18,
                                },
                                export: true,
                                declare: true,
                                span: 4:5-4:19,
                            },
                        },
                    },
                    key: "Outer.Inner",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_MixedGlobalAndNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "globalVar",
                                    span: 2:13-2:22,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 2:24-2:30,
                                },
                                declare: true,
                                span: 2:9-2:31,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "globalFunc",
                                    span: 8:18-8:28,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 8:32-8:36,
                                    },
                                },
                                declare: true,
                                span: 8:9-8:37,
                            },
                        },
                    },
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "nsVar",
                                    span: 5:7-5:12,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 5:14-5:20,
                                },
                                export: true,
                                declare: true,
                                span: 5:3-5:21,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_MultipleNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:7-3:8,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:10-3:16,
                                },
                                export: true,
                                declare: true,
                                span: 3:3-3:17,
                            },
                        },
                    },
                    key: "NS1",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 7:7-7:8,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 7:10-7:16,
                                },
                                export: true,
                                declare: true,
                                span: 7:3-7:17,
                            },
                        },
                    },
                    key: "NS2",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_NamespaceMerging - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:7-3:8,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:10-3:16,
                                },
                                export: true,
                                declare: true,
                                span: 3:3-3:17,
                            },
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 7:7-7:8,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 7:10-7:16,
                                },
                                export: true,
                                declare: true,
                                span: 7:3-7:17,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientDeclarations - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 2:13-2:14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 2:16-2:22,
                                },
                                declare: true,
                                span: 2:9-2:23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 3:18-3:21,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 3:25-3:29,
                                    },
                                },
                                declare: true,
                                span: 3:9-3:30,
                            },
                            &ast.ClassDecl{
                                Name: &ast.Ident{
                                    Name: "MyClass",
                                    span: 4:15-4:22,
                                },
                                declare: true,
                                span: 4:9-4:25,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:7-3:8,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:10-3:16,
                                },
                                export: true,
                                declare: true,
                                span: 3:3-3:17,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_DeeplyNestedNamespaces - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 5:11-5:12,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 5:14-5:20,
                                },
                                export: true,
                                declare: true,
                                span: 5:7-5:21,
                            },
                        },
                    },
                    key: "A.B.C",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_ModuleDeclaration - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        isoid: 0x0,
        root:  &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            isoid: 0x0,
            count: 1,
            items: {
                {
                    value: &ast.Namespace{
                        Decls: {
                            &ast.VarDecl{
                                Kind:    1,
                                Pattern: &ast.IdentPat{
                                    Name:    "x",
                                    TypeAnn: nil,
                                    Default: nil,
                                    span:    ast.Span{
                                        Start:    ast.Location{Line:3, Column:7},
                                        End:      ast.Location{Line:3, Column:8},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: ast.Span{
                                        Start:    ast.Location{Line:3, Column:10},
                                        End:      ast.Location{Line:3, Column:16},
                                        SourceID: 0,
                                    },
                                    inferredType: nil,
                                },
                                Init:    nil,
                                export:  false,
                                declare: true,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:3, Column:3},
                                    End:      ast.Location{Line:3, Column:17},
                                    SourceID: 0,
                                },
                                InferredType: nil,
                                provenance:   nil,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: ast.Span{
                                        Start:    ast.Location{Line:4, Column:12},
                                        End:      ast.Location{Line:4, Column:15},
                                        SourceID: 0,
                                    },
                                },
                                FuncSig: ast.FuncSig{
                                    TypeParams: {
                                    },
                                    Params: {
                                    },
                                    Return: &ast.TypeRefTypeAnn{
                                        Name: &ast.Ident{
                                            Name: "void",
                                            span: ast.Span{
                                                Start:    ast.Location{Line:4, Column:19},
                                                End:      ast.Location{Line:4, Column:23},
                                                SourceID: 0,
                                            },
                                        },
                                        TypeArgs: {
                                        },
                                        span: ast.Span{
                                            Start:    ast.Location{Line:4, Column:19},
                                            End:      ast.Location{Line:4, Column:23},
                                            SourceID: 0,
                                        },
                                        inferredType: nil,
                                    },
                                    Throws: nil,
                                    Async:  false,
                                },
                                Body:    (*ast.Block)(nil),
                                export:  false,
                                declare: true,
                                span:    ast.Span{
                                    Start:    ast.Location{Line:4, Column:3},
                                    End:      ast.Location{Line:4, Column:24},
                                    SourceID: 0,
                                },
                                provenance: nil,
                            },
                        },
                    },
                    key: "my-module",
                },
            },
            children: (*[]*btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace])(nil),
        },
        count:         1,
        empty:         btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{},
        min:           31,
        max:           63,
        copyValues:    false,
        isoCopyValues: false,
    },
}
---

[TestConvertModule_AmbientNamespaceAutoExport - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:7-3:8,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:10-3:16,
                                },
                                export: true,
                                declare: true,
                                span: 3:3-3:17,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 4:12-4:15,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 4:19-4:23,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 4:3-4:24,
                            },
                            &ast.ClassDecl{
                                Name: &ast.Ident{
                                    Name: "MyClass",
                                    span: 5:9-5:16,
                                },
                                export: true,
                                declare: true,
                                span: 5:3-5:19,
                            },
                            &ast.InterfaceDecl{
                                Name: &ast.Ident{
                                    Name: "MyInterface",
                                    span: 6:13-6:24,
                                },
                                TypeAnn: &ast.ObjectTypeAnn{
                                    span: 6:3-6:27,
                                },
                                export: true,
                                declare: true,
                                span: 6:3-6:27,
                            },
                            &ast.TypeDecl{
                                Name: &ast.Ident{
                                    Name: "MyType",
                                    span: 7:8-7:14,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 7:17-7:23,
                                },
                                export: true,
                                declare: true,
                                span: 7:3-7:24,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_AmbientNamespaceNestedAutoExport - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 2,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 7:7-7:8,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 7:10-7:16,
                                },
                                export: true,
                                declare: true,
                                span: 7:3-7:17,
                            },
                        },
                    },
                    key: "Outer",
                },
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 4:9-4:10,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 4:12-4:18,
                                },
                                export: true,
                                declare: true,
                                span: 4:5-4:19,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 5:14-5:17,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 5:21-5:25,
                                    },
                                },
                                export: true,
                                declare: true,
                                span: 5:5-5:26,
                            },
                        },
                    },
                    key: "Outer.Inner",
                },
            },
        },
        count: 2,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_TopLevelDeclareNotAutoExported - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 2:13-2:14,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 2:16-2:22,
                                },
                                declare: true,
                                span: 2:9-2:23,
                            },
                            &ast.FuncDecl{
                                Name: &ast.Ident{
                                    Name: "foo",
                                    span: 3:18-3:21,
                                },
                                FuncSig: ast.FuncSig{
                                    Return: &ast.VoidTypeAnn{
                                        span: 3:25-3:29,
                                    },
                                },
                                declare: true,
                                span: 3:9-3:30,
                            },
                        },
                    },
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---

[TestConvertModule_ExplicitExportInAmbientNamespace - 1]
&ast.Module{
    Namespaces: btree.Map[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
        root: &btree.mapNode[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
            count: 1,
            items: []btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                btree.mapPair[string,*github.com/escalier-lang/escalier/internal/ast.Namespace]{
                    value: &ast.Namespace{
                        Decls: []ast.Decl{
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "x",
                                    span: 3:14-3:15,
                                },
                                TypeAnn: &ast.NumberTypeAnn{
                                    span: 3:17-3:23,
                                },
                                export: true,
                                declare: true,
                                span: 3:10-3:24,
                            },
                            &ast.VarDecl{
                                Kind: 1,
                                Pattern: &ast.IdentPat{
                                    Name: "y",
                                    span: 4:7-4:8,
                                },
                                TypeAnn: &ast.StringTypeAnn{
                                    span: 4:10-4:16,
                                },
                                export: true,
                                declare: true,
                                span: 4:3-4:17,
                            },
                        },
                    },
                    key: "MyNamespace",
                },
            },
        },
        count: 1,
        min: 31,
        max: 63,
    },
}
---
